Made thing do thing

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,15 @@
-numpy>=1.14.3
-pandas>=0.22
+numpy
+pandas
 tensorflow
 tensorboard
-h5py>=2.8
-xmljson>=0.1.9
-scipy>=1.1
-scikit-learn>=0.20
-tqdm>=4.26
-xarray>=0.11.2
-seaborn>=0.9
-openpyxl>=3.0
-wfdb >= 2.2.1
+h5py
+scipy
+scikit-learn
+seaborn
+wfdb
 tk
-opencv-python
-Pillow
 matplotlib
 tabulate
 imbalanced-learn
 biosppy
+wandb
